@@ -1,35 +1,35 @@
 /*
- * Copyright 2015-2019 The OpenZipkin Authors
- *
- * Licensed under the Apache License, Version 2.0 (the "License"); you may not use this file except
- * in compliance with the License. You may obtain a copy of the License at
- *
- * http://www.apache.org/licenses/LICENSE-2.0
- *
- * Unless required by applicable law or agreed to in writing, software distributed under the License
- * is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express
- * or implied. See the License for the specific language governing permissions and limitations under
- * the License.
+ * Copyright The OpenZipkin Authors
+ * SPDX-License-Identifier: Apache-2.0
  */
 package zipkin2.collector.activemq;
 
 import java.io.IOException;
 import java.io.UncheckedIOException;
-import java.util.Arrays;
+import java.lang.reflect.Method;
 import java.util.List;
+import java.util.Map;
+import java.util.NoSuchElementException;
+import java.util.Optional;
 import java.util.concurrent.CopyOnWriteArraySet;
 import java.util.concurrent.CountDownLatch;
 import java.util.concurrent.LinkedBlockingQueue;
 import java.util.concurrent.atomic.AtomicInteger;
+import javax.jms.BytesMessage;
+import javax.jms.Connection;
+import javax.jms.Queue;
+import javax.jms.QueueReceiver;
+import javax.jms.QueueSender;
+import javax.jms.QueueSession;
 import org.apache.activemq.ActiveMQConnectionFactory;
-import org.apache.activemq.junit.EmbeddedActiveMQBroker;
-import org.junit.After;
-import org.junit.Before;
-import org.junit.ClassRule;
-import org.junit.Rule;
-import org.junit.Test;
-import org.junit.rules.ExpectedException;
-import org.junit.rules.TestName;
+import org.junit.jupiter.api.AfterEach;
+import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.Tag;
+import org.junit.jupiter.api.Test;
+import org.junit.jupiter.api.TestInfo;
+import org.junit.jupiter.api.TestInstance;
+import org.junit.jupiter.api.Timeout;
+import org.junit.jupiter.api.extension.RegisterExtension;
 import zipkin2.Call;
 import zipkin2.Callback;
 import zipkin2.Component;
@@ -41,54 +41,64 @@ import zipkin2.storage.SpanConsumer;
 import zipkin2.storage.StorageComponent;
 
 import static org.assertj.core.api.Assertions.assertThat;
+import static org.junit.jupiter.api.Assertions.assertThrows;
 import static zipkin2.TestObjects.LOTS_OF_SPANS;
 import static zipkin2.TestObjects.UTF_8;
 import static zipkin2.codec.SpanBytesEncoder.PROTO3;
 import static zipkin2.codec.SpanBytesEncoder.THRIFT;
 
-public class ITActiveMQCollector {
-  List<Span> spans = Arrays.asList(LOTS_OF_SPANS[0], LOTS_OF_SPANS[1]);
+@TestInstance(TestInstance.Lifecycle.PER_CLASS)
+@Timeout(60)
+@Tag("docker")
+class ITActiveMQCollector {
+  @RegisterExtension static ActiveMQExtension activemq = new ActiveMQExtension();
+  List<Span> spans = List.of(LOTS_OF_SPANS[0], LOTS_OF_SPANS[1]);
 
-  @ClassRule public static EmbeddedActiveMQBroker activemq = new EmbeddedActiveMQBroker();
-  @Rule public TestName testName = new TestName();
-  @Rule public ExpectedException thrown = ExpectedException.none();
+  public String testName;
 
   InMemoryCollectorMetrics metrics = new InMemoryCollectorMetrics();
   InMemoryCollectorMetrics activemqMetrics = metrics.forTransport("activemq");
 
   CopyOnWriteArraySet<Thread> threadsProvidingSpans = new CopyOnWriteArraySet<>();
   LinkedBlockingQueue<List<Span>> receivedSpans = new LinkedBlockingQueue<>();
-  SpanConsumer consumer = (spans) -> {
-    threadsProvidingSpans.add(Thread.currentThread());
-    receivedSpans.add(spans);
-    return Call.create(null);
-  };
-
+  SpanConsumer consumer;
   ActiveMQCollector collector;
 
-  @Before public void start() {
+  @BeforeEach void start(TestInfo testInfo) {
+    Optional<Method> testMethod = testInfo.getTestMethod();
+    if (testMethod.isPresent()) {
+      this.testName = testMethod.get().getName();
+    }
+    threadsProvidingSpans.clear();
+    receivedSpans.clear();
+    consumer = (spans) -> {
+      threadsProvidingSpans.add(Thread.currentThread());
+      receivedSpans.add(spans);
+      return Call.create(null);
+    };
+    activemqMetrics.clear();
     collector = builder().build().start();
   }
 
-  @After public void stop() throws IOException {
+  @AfterEach void stop() throws IOException {
     collector.close();
   }
 
-  @Test public void checkPasses() {
+  @Test void checkPasses() {
     assertThat(collector.check().ok()).isTrue();
   }
 
-  @Test public void startFailsWithInvalidActiveMqServer() throws Exception {
-    collector.close();
+  @Test void startFailsWithInvalidActiveMqServer() {
+    Throwable exception = assertThrows(UncheckedIOException.class, () -> {
+      collector.close();
 
-    ActiveMQConnectionFactory connectionFactory = new ActiveMQConnectionFactory();
-    // we can be pretty certain ActiveMQ isn't running on localhost port 80
-    connectionFactory.setBrokerURL("tcp://localhost:80");
-    collector = builder().connectionFactory(connectionFactory).build();
-
-    thrown.expect(UncheckedIOException.class);
-    thrown.expectMessage("Unable to establish connection to ActiveMQ broker: Connection refused");
-    collector.start();
+      ActiveMQConnectionFactory connectionFactory = new ActiveMQConnectionFactory();
+      // we can be pretty certain ActiveMQ isn't running on localhost port 80
+      connectionFactory.setBrokerURL("tcp://localhost:80");
+      collector = builder().connectionFactory(connectionFactory).build();
+      collector.start();
+    });
+    assertThat(exception.getMessage()).contains("Unable to establish connection to ActiveMQ broker: Connection refused");
   }
 
   /**
@@ -97,30 +107,29 @@ public class ITActiveMQCollector {
    * to ensure {@code toString()} output is a reasonable length and does not contain sensitive
    * information.
    */
-  @Test public void toStringContainsOnlySummaryInformation() {
-    assertThat(collector).hasToString(String.format("ActiveMQCollector{brokerURL=%s, queue=%s}",
-      activemq.getVmURL(), testName.getMethodName())
-    );
+  @Test void toStringContainsOnlySummaryInformation() {
+    assertThat(collector).hasToString(
+      "ActiveMQCollector{brokerURL=%s, queue=%s}".formatted(activemq.brokerURL(), testName));
   }
 
   /** Ensures list encoding works: a json encoded list of spans */
-  @Test public void messageWithMultipleSpans_json() throws Exception {
+  @Test void messageWithMultipleSpans_json() throws Exception {
     messageWithMultipleSpans(SpanBytesEncoder.JSON_V1);
   }
 
   /** Ensures list encoding works: a version 2 json list of spans */
-  @Test public void messageWithMultipleSpans_json2() throws Exception {
+  @Test void messageWithMultipleSpans_json2() throws Exception {
     messageWithMultipleSpans(SpanBytesEncoder.JSON_V2);
   }
 
   /** Ensures list encoding works: proto3 ListOfSpans */
-  @Test public void messageWithMultipleSpans_proto3() throws Exception {
+  @Test void messageWithMultipleSpans_proto3() throws Exception {
     messageWithMultipleSpans(SpanBytesEncoder.PROTO3);
   }
 
   void messageWithMultipleSpans(SpanBytesEncoder encoder) throws Exception {
     byte[] message = encoder.encodeList(spans);
-    activemq.pushMessage(collector.queue, message);
+    pushMessage(collector.queue, message);
 
     assertThat(receivedSpans.take()).isEqualTo(spans);
 
@@ -132,27 +141,27 @@ public class ITActiveMQCollector {
   }
 
   /** Ensures malformed spans don't hang the collector */
-  @Test public void skipsMalformedData() throws Exception {
+  @Test void skipsMalformedData() throws Exception {
     byte[] malformed1 = "[\"='".getBytes(UTF_8); // screwed up json
     byte[] malformed2 = "malformed".getBytes(UTF_8);
-    activemq.pushMessage(collector.queue, THRIFT.encodeList(spans));
-    activemq.pushMessage(collector.queue, new byte[0]);
-    activemq.pushMessage(collector.queue, malformed1);
-    activemq.pushMessage(collector.queue, malformed2);
-    activemq.pushMessage(collector.queue, THRIFT.encodeList(spans));
+    pushMessage(collector.queue, THRIFT.encodeList(spans));
+    pushMessage(collector.queue, new byte[0]);
+    pushMessage(collector.queue, malformed1);
+    pushMessage(collector.queue, malformed2);
+    pushMessage(collector.queue, THRIFT.encodeList(spans));
 
     Thread.sleep(1000);
 
     assertThat(activemqMetrics.messages()).isEqualTo(5);
     assertThat(activemqMetrics.messagesDropped()).isEqualTo(2); // only malformed, not empty
-    assertThat(activemqMetrics.bytes())
-      .isEqualTo(THRIFT.encodeList(spans).length * 2 + malformed1.length + malformed2.length);
+    assertThat(activemqMetrics.bytes()).isEqualTo(
+      THRIFT.encodeList(spans).length * 2 + malformed1.length + malformed2.length);
     assertThat(activemqMetrics.spans()).isEqualTo(spans.size() * 2);
     assertThat(activemqMetrics.spansDropped()).isZero();
   }
 
   /** Guards against errors that leak from storage, such as InvalidQueryException */
-  @Test public void skipsOnSpanStorageException() throws Exception {
+  @Test void skipsOnSpanStorageException() throws Exception {
     collector.close();
 
     AtomicInteger counter = new AtomicInteger();
@@ -175,11 +184,11 @@ public class ITActiveMQCollector {
       }
     };
 
-    activemq.pushMessage(collector.queue, PROTO3.encodeList(spans));
-    activemq.pushMessage(collector.queue, PROTO3.encodeList(spans)); // tossed on error
-    activemq.pushMessage(collector.queue, PROTO3.encodeList(spans));
-
     collector = builder().storage(buildStorage(consumer)).build().start();
+
+    pushMessage(collector.queue, PROTO3.encodeList(spans));
+    pushMessage(collector.queue, PROTO3.encodeList(spans)); // tossed on error
+    pushMessage(collector.queue, PROTO3.encodeList(spans));
 
     assertThat(receivedSpans.take()).containsExactlyElementsOf(spans);
     // the only way we could read this, is if the malformed span was skipped.
@@ -192,7 +201,7 @@ public class ITActiveMQCollector {
     assertThat(activemqMetrics.spansDropped()).isEqualTo(spans.size()); // only one dropped
   }
 
-  @Test public void messagesDistributedAcrossMultipleThreadsSuccessfully() throws Exception {
+  @Test void messagesDistributedAcrossMultipleThreadsSuccessfully() throws Exception {
     collector.close();
 
     CountDownLatch latch = new CountDownLatch(2);
@@ -206,15 +215,15 @@ public class ITActiveMQCollector {
       return consumer.accept(spans);
     })).build().start();
 
-    activemq.pushMessage(collector.queue, ""); // empty bodies don't go to storage
-    activemq.pushMessage(collector.queue, PROTO3.encodeList(spans));
-    activemq.pushMessage(collector.queue, PROTO3.encodeList(spans));
+    pushMessage(collector.queue, new byte[] {}); // empty bodies don't go to storage
+    pushMessage(collector.queue, PROTO3.encodeList(spans));
+    pushMessage(collector.queue, PROTO3.encodeList(spans));
 
     assertThat(receivedSpans.take()).containsExactlyElementsOf(spans);
     latch.countDown();
     assertThat(receivedSpans.take()).containsExactlyElementsOf(spans);
 
-    assertThat(threadsProvidingSpans.size()).isEqualTo(2);
+    assertThat(threadsProvidingSpans).hasSize(2);
 
     assertThat(activemqMetrics.messages()).isEqualTo(3); // 2 + empty body for warmup
     assertThat(activemqMetrics.messagesDropped()).isZero();
@@ -224,12 +233,11 @@ public class ITActiveMQCollector {
   }
 
   ActiveMQCollector.Builder builder() {
-    return ActiveMQCollector.builder()
-      .connectionFactory(activemq.createConnectionFactory())
+    // prevent test flakes by having each run in an individual queue
+    return activemq.newCollectorBuilder(testName)
       .storage(buildStorage(consumer))
       .metrics(metrics)
-      // prevent test flakes by having each run in an individual queue
-      .queue(testName.getMethodName());
+      .queue(testName);
   }
 
   static StorageComponent buildStorage(final SpanConsumer spanConsumer) {
@@ -242,5 +250,31 @@ public class ITActiveMQCollector {
         return spanConsumer;
       }
     };
+  }
+
+  void pushMessage(String queueName, byte[] message) throws Exception {
+    ActiveMQSpanConsumer consumer = collector.lazyInit.result;
+
+    // Look up the existing session for this queue, so that there is no chance of flakes.
+    QueueSession session = null;
+    Queue queue = null;
+    for (Map.Entry<QueueSession, QueueReceiver> entry : consumer.sessionToReceiver.entrySet()) {
+      if (entry.getValue().getQueue().getQueueName().equals(queueName)) {
+        session = entry.getKey();
+        queue = entry.getValue().getQueue();
+        break;
+      }
+    }
+    if (session == null) {
+      throw new NoSuchElementException("couldn't find session for queue " + queueName);
+    }
+
+    Connection conn = collector.lazyInit.result.connection;
+
+    try (QueueSender sender = session.createSender(queue)) {
+      BytesMessage bytesMessage = session.createBytesMessage();
+      bytesMessage.writeBytes(message);
+      sender.send(bytesMessage);
+    }
   }
 }
