@@ -1,19 +1,9 @@
 /*
- * Copyright 2015-2020 The OpenZipkin Authors
- *
- * Licensed under the Apache License, Version 2.0 (the "License"); you may not use this file except
- * in compliance with the License. You may obtain a copy of the License at
- *
- * http://www.apache.org/licenses/LICENSE-2.0
- *
- * Unless required by applicable law or agreed to in writing, software distributed under the License
- * is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express
- * or implied. See the License for the specific language governing permissions and limitations under
- * the License.
+ * Copyright The OpenZipkin Authors
+ * SPDX-License-Identifier: Apache-2.0
  */
 package zipkin2.collector.kafka;
 
-import java.util.Arrays;
 import java.util.List;
 import java.util.Properties;
 import java.util.concurrent.CopyOnWriteArraySet;
@@ -26,13 +16,13 @@ import org.apache.kafka.clients.producer.ProducerConfig;
 import org.apache.kafka.clients.producer.ProducerRecord;
 import org.apache.kafka.common.KafkaException;
 import org.apache.kafka.common.serialization.ByteArraySerializer;
-import org.junit.After;
-import org.junit.Before;
-import org.junit.ClassRule;
-import org.junit.Rule;
-import org.junit.Test;
-import org.junit.rules.ExpectedException;
-import org.junit.rules.Timeout;
+import org.junit.jupiter.api.AfterEach;
+import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.Tag;
+import org.junit.jupiter.api.Test;
+import org.junit.jupiter.api.TestInstance;
+import org.junit.jupiter.api.Timeout;
+import org.junit.jupiter.api.extension.RegisterExtension;
 import zipkin2.Call;
 import zipkin2.Callback;
 import zipkin2.Component;
@@ -50,13 +40,13 @@ import static zipkin2.TestObjects.UTF_8;
 import static zipkin2.codec.SpanBytesEncoder.JSON_V2;
 import static zipkin2.codec.SpanBytesEncoder.THRIFT;
 
-public class ITKafkaCollector {
-  @ClassRule public static KafkaCollectorRule kafka = new KafkaCollectorRule();
+@TestInstance(TestInstance.Lifecycle.PER_CLASS)
+@Timeout(60)
+@Tag("docker")
+class ITKafkaCollector {
+  @RegisterExtension static KafkaExtension kafka = new KafkaExtension();
 
-  @Rule public Timeout globalTimeout = Timeout.seconds(30);
-  @Rule public ExpectedException thrown = ExpectedException.none();
-
-  List<Span> spans = Arrays.asList(LOTS_OF_SPANS[0], LOTS_OF_SPANS[1]);
+  List<Span> spans = List.of(LOTS_OF_SPANS[0], LOTS_OF_SPANS[1]);
 
   InMemoryCollectorMetrics metrics = new InMemoryCollectorMetrics();
   InMemoryCollectorMetrics kafkaMetrics = metrics.forTransport("kafka");
@@ -70,17 +60,19 @@ public class ITKafkaCollector {
   };
   KafkaProducer<byte[], byte[]> producer;
 
-  @Before public void setup() {
-    final Properties config = new Properties();
-    config.put(ProducerConfig.BOOTSTRAP_SERVERS_CONFIG, kafka.bootstrapServers());
+  @BeforeEach void setup() {
+    metrics.clear();
+    threadsProvidingSpans.clear();
+    Properties config = new Properties();
+    config.put(ProducerConfig.BOOTSTRAP_SERVERS_CONFIG, kafka.bootstrapServer());
     producer = new KafkaProducer<>(config, new ByteArraySerializer(), new ByteArraySerializer());
   }
 
-  @After public void teardown() {
-    producer.close();
+  @AfterEach void tearDown() {
+    if (producer != null) producer.close();
   }
 
-  @Test public void checkPasses() {
+  @Test void checkPasses() {
     try (KafkaCollector collector = builder("check_passes").build()) {
       assertThat(collector.check().ok()).isTrue();
     }
@@ -90,7 +82,7 @@ public class ITKafkaCollector {
    * Don't raise exception (crash process), rather fail status check! This allows the health check
    * to report the cause.
    */
-  @Test public void check_failsOnInvalidBootstrapServers() throws Exception {
+  @Test void check_failsOnInvalidBootstrapServers() throws Exception {
 
     KafkaCollector.Builder builder =
       builder("fail_invalid_bootstrap_servers").bootstrapServers("1.1.1.1");
@@ -116,8 +108,7 @@ public class ITKafkaCollector {
    * Connect to the cluster, and request a Cluster description to validate communication with
    * Kafka.
    */
-  @Test
-  public void reconnectsIndefinitelyAndReportsUnhealthyWhenKafkaUnavailable() throws Exception {
+  @Test void reconnectsIndefinitelyAndReportsUnhealthyWhenKafkaUnavailable() throws Exception {
     KafkaCollector.Builder builder =
       builder("fail_invalid_bootstrap_servers").bootstrapServers("localhost:" + 9092);
 
@@ -129,7 +120,7 @@ public class ITKafkaCollector {
   }
 
   /** Ensures legacy encoding works: a single TBinaryProtocol encoded span */
-  @Test public void messageWithSingleThriftSpan() throws Exception {
+  @Test void messageWithSingleThriftSpan() throws Exception {
     KafkaCollector.Builder builder = builder("single_span");
 
     byte[] bytes = THRIFT.encode(CLIENT_SPAN);
@@ -148,22 +139,22 @@ public class ITKafkaCollector {
   }
 
   /** Ensures list encoding works: a TBinaryProtocol encoded list of spans */
-  @Test public void messageWithMultipleSpans_thrift() throws Exception {
+  @Test void messageWithMultipleSpans_thrift() throws Exception {
     messageWithMultipleSpans(builder("multiple_spans_thrift"), THRIFT);
   }
 
   /** Ensures list encoding works: a json encoded list of spans */
-  @Test public void messageWithMultipleSpans_json() throws Exception {
+  @Test void messageWithMultipleSpans_json() throws Exception {
     messageWithMultipleSpans(builder("multiple_spans_json"), SpanBytesEncoder.JSON_V1);
   }
 
   /** Ensures list encoding works: a version 2 json list of spans */
-  @Test public void messageWithMultipleSpans_json2() throws Exception {
+  @Test void messageWithMultipleSpans_json2() throws Exception {
     messageWithMultipleSpans(builder("multiple_spans_json2"), SpanBytesEncoder.JSON_V2);
   }
 
   /** Ensures list encoding works: proto3 ListOfSpans */
-  @Test public void messageWithMultipleSpans_proto3() throws Exception {
+  @Test void messageWithMultipleSpans_proto3() throws Exception {
     messageWithMultipleSpans(builder("multiple_spans_proto3"), SpanBytesEncoder.PROTO3);
   }
 
@@ -186,7 +177,7 @@ public class ITKafkaCollector {
   }
 
   /** Ensures malformed spans don't hang the collector */
-  @Test public void skipsMalformedData() throws Exception {
+  @Test void skipsMalformedData() throws Exception {
     KafkaCollector.Builder builder = builder("decoder_exception");
 
     byte[] malformed1 = "[\"='".getBytes(UTF_8); // screwed up json
@@ -213,7 +204,7 @@ public class ITKafkaCollector {
   }
 
   /** Guards against errors that leak from storage, such as InvalidQueryException */
-  @Test public void skipsOnSpanStorageException() throws Exception {
+  @Test void skipsOnSpanStorageException() throws Exception {
     AtomicInteger counter = new AtomicInteger();
     consumer = (input) -> new Call.Base<Void>() {
       @Override protected Void doExecute() {
@@ -254,10 +245,10 @@ public class ITKafkaCollector {
     assertThat(kafkaMetrics.spansDropped()).isEqualTo(spans.size()); // only one dropped
   }
 
-  @Test public void messagesDistributedAcrossMultipleThreadsSuccessfully() throws Exception {
+  @Test void messagesDistributedAcrossMultipleThreadsSuccessfully() throws Exception {
     KafkaCollector.Builder builder = builder("multi_thread", 2);
 
-    kafka.prepareTopic(builder.topic, 2);
+    kafka.prepareTopics(builder.topic, 2);
     warmUpTopic(builder.topic);
 
     final byte[] traceBytes = JSON_V2.encodeList(spans);
@@ -270,7 +261,7 @@ public class ITKafkaCollector {
       assertThat(receivedSpans.take()).containsExactlyElementsOf(spans);
     }
 
-    assertThat(threadsProvidingSpans.size()).isEqualTo(2);
+    assertThat(threadsProvidingSpans).hasSize(2);
 
     assertThat(kafkaMetrics.messages()).isEqualTo(3); // 2 + empty body for warmup
     assertThat(kafkaMetrics.messagesDropped()).isZero();
@@ -279,7 +270,7 @@ public class ITKafkaCollector {
     assertThat(kafkaMetrics.spansDropped()).isZero();
   }
 
-  @Test public void multipleTopicsCommaDelimited() {
+  @Test void multipleTopicsCommaDelimited() {
     try (KafkaCollector collector = builder("topic1,topic2").build()) {
       collector.start();
 
@@ -293,13 +284,13 @@ public class ITKafkaCollector {
    * to ensure {@code toString()} output is a reasonable length and does not contain sensitive
    * information.
    */
-  @Test public void toStringContainsOnlySummaryInformation() {
+  @Test void toStringContainsOnlySummaryInformation() {
     try (KafkaCollector collector = builder("muah").build()) {
       collector.start();
 
       assertThat(collector).hasToString(
-        String.format("KafkaCollector{bootstrapServers=%s, topic=%s}",
-          kafka.bootstrapServers(), "muah")
+        "KafkaCollector{bootstrapServers=%s, topic=%s}".formatted(kafka.bootstrapServer(),
+          "muah")
       );
     }
   }
@@ -349,11 +340,8 @@ public class ITKafkaCollector {
   }
 
   KafkaCollector.Builder builder(String topic, int streams) {
-    return kafka.newCollectorBuilder()
+    return kafka.newCollectorBuilder(topic, streams)
       .metrics(metrics)
-      .topic(topic)
-      .groupId(topic + "_group")
-      .streams(streams)
       .storage(buildStorage(consumer));
   }
 
