@@ -1,52 +1,34 @@
 /*
- * Copyright 2015-2019 The OpenZipkin Authors
- *
- * Licensed under the Apache License, Version 2.0 (the "License"); you may not use this file except
- * in compliance with the License. You may obtain a copy of the License at
- *
- * http://www.apache.org/licenses/LICENSE-2.0
- *
- * Unless required by applicable law or agreed to in writing, software distributed under the License
- * is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express
- * or implied. See the License for the specific language governing permissions and limitations under
- * the License.
+ * Copyright The OpenZipkin Authors
+ * SPDX-License-Identifier: Apache-2.0
  */
 package zipkin2.collector.activemq;
 
-import java.util.Arrays;
+import java.util.List;
 import java.util.function.Function;
-import org.assertj.core.api.Assertions;
-import org.junit.After;
-import org.junit.Test;
-import org.junit.runner.RunWith;
-import org.junit.runners.Parameterized;
-import org.junit.runners.Parameterized.Parameter;
-import org.junit.runners.Parameterized.Parameters;
+import org.junit.jupiter.api.AfterEach;
+import org.junit.jupiter.params.ParameterizedTest;
+import org.junit.jupiter.params.provider.MethodSource;
 import org.springframework.boot.test.util.TestPropertyValues;
 import org.springframework.context.annotation.AnnotationConfigApplicationContext;
 import zipkin2.server.internal.activemq.Access;
 
-@RunWith(Parameterized.class)
+import static org.assertj.core.api.Assertions.assertThat;
+
 public class ZipkinActiveMQCollectorPropertiesOverrideTest {
 
   AnnotationConfigApplicationContext context = new AnnotationConfigApplicationContext();
 
-  @After public void close() {
+  @AfterEach void close() {
     context.close();
   }
 
-  @Parameter(0)
   public String property;
-
-  @Parameter(1)
   public Object value;
-
-  @Parameter(2)
   public Function<ActiveMQCollector.Builder, Object> builderExtractor;
 
-  @Parameters(name = "{0}")
   public static Iterable<Object[]> data() {
-    return Arrays.asList(
+    return List.of(
       parameters("url", "failover:(tcp://localhost:61616,tcp://remotehost:61616)",
         b -> b.connectionFactory.getBrokerURL()),
       parameters("client-id-prefix", "zipkin-prod", b -> b.connectionFactory.getClientIDPrefix()),
@@ -63,7 +45,11 @@ public class ZipkinActiveMQCollectorPropertiesOverrideTest {
     return new Object[] {"zipkin.collector.activemq." + propertySuffix, value, builderExtractor};
   }
 
-  @Test public void propertyTransferredToCollectorBuilder() {
+  @MethodSource("data")
+  @ParameterizedTest(name = "{0}")
+  void propertyTransferredToCollectorBuilder(String property, Object value,
+    Function<ActiveMQCollector.Builder, Object> builderExtractor) {
+    initZipkinActiveMQCollectorPropertiesOverrideTest(property, value, builderExtractor);
     if (!property.endsWith("url")) {
       TestPropertyValues.of("zipkin.collector.activemq.url:tcp://localhost:61616").applyTo(context);
     }
@@ -82,8 +68,15 @@ public class ZipkinActiveMQCollectorPropertiesOverrideTest {
     Access.registerActiveMQProperties(context);
     context.refresh();
 
-    Assertions.assertThat(Access.collectorBuilder(context))
+    assertThat(Access.collectorBuilder(context))
       .extracting(builderExtractor)
       .isEqualTo(value);
+  }
+
+  void initZipkinActiveMQCollectorPropertiesOverrideTest(String property, Object value,
+    Function<ActiveMQCollector.Builder, Object> builderExtractor) {
+    this.property = property;
+    this.value = value;
+    this.builderExtractor = builderExtractor;
   }
 }
