@@ -1,15 +1,6 @@
 /*
- * Copyright 2015-2020 The OpenZipkin Authors
- *
- * Licensed under the Apache License, Version 2.0 (the "License"); you may not use this file except
- * in compliance with the License. You may obtain a copy of the License at
- *
- * http://www.apache.org/licenses/LICENSE-2.0
- *
- * Unless required by applicable law or agreed to in writing, software distributed under the License
- * is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express
- * or implied. See the License for the specific language governing permissions and limitations under
- * the License.
+ * Copyright The OpenZipkin Authors
+ * SPDX-License-Identifier: Apache-2.0
  */
 package zipkin2.server.internal;
 
@@ -24,12 +15,10 @@ import okhttp3.OkHttpClient;
 import okhttp3.Request;
 import okhttp3.Response;
 import okio.Okio;
-import org.junit.Before;
-import org.junit.Test;
-import org.junit.runner.RunWith;
+import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.Test;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.test.context.SpringBootTest;
-import org.springframework.test.context.junit4.SpringRunner;
 import zipkin.server.ZipkinServer;
 import zipkin2.Endpoint;
 import zipkin2.Span;
@@ -37,7 +26,6 @@ import zipkin2.TestObjects;
 import zipkin2.codec.SpanBytesEncoder;
 import zipkin2.storage.InMemoryStorage;
 
-import static java.util.Arrays.asList;
 import static org.assertj.core.api.Assertions.assertThat;
 import static zipkin2.TestObjects.CLIENT_SPAN;
 import static zipkin2.TestObjects.FRONTEND;
@@ -49,23 +37,22 @@ import static zipkin2.TestObjects.UTF_8;
   webEnvironment = SpringBootTest.WebEnvironment.NONE, // RANDOM_PORT requires spring-web
   properties = {
     "server.port=0",
-    "spring.config.name=zipkin-server"
+    "spring.config.name=zipkin-server",
   }
 )
-@RunWith(SpringRunner.class)
 public class ITZipkinServer {
-  static final List<Span> TRACE = asList(TestObjects.CLIENT_SPAN);
+  static final List<Span> TRACE = List.of(TestObjects.CLIENT_SPAN);
 
   @Autowired InMemoryStorage storage;
   @Autowired Server server;
 
   OkHttpClient client = new OkHttpClient.Builder().followRedirects(true).build();
 
-  @Before public void init() {
+  @BeforeEach void init() {
     storage.clear();
   }
 
-  @Test public void getTrace() throws Exception {
+  @Test void getTrace() throws Exception {
     storage.accept(TRACE).execute();
 
     Response response = get("/api/v2/trace/" + TRACE.get(0).traceId());
@@ -75,7 +62,7 @@ public class ITZipkinServer {
       .containsExactly(SpanBytesEncoder.JSON_V2.encodeList(TRACE));
   }
 
-  @Test public void getTrace_notFound() throws Exception {
+  @Test void getTrace_notFound() throws Exception {
     Response response = get("/api/v2/trace/" + TRACE.get(0).traceId());
     assertThat(response.code()).isEqualTo(404);
 
@@ -83,7 +70,7 @@ public class ITZipkinServer {
       .isEqualTo(TRACE.get(0).traceId() + " not found");
   }
 
-  @Test public void getTrace_malformed() throws Exception {
+  @Test void getTrace_malformed() throws Exception {
     storage.accept(TRACE).execute();
 
     Response response = get("/api/v2/trace/0e8b46e1-81b");
@@ -93,7 +80,7 @@ public class ITZipkinServer {
       .isEqualTo("0e8b46e1-81b should be lower-hex encoded with no prefix");
   }
 
-  @Test public void getTraces() throws Exception {
+  @Test void getTraces() throws Exception {
     storage.accept(TRACE).execute();
 
     Response response = get("/api/v2/traceMany?traceIds=abcd," + TRACE.get(0).traceId());
@@ -103,7 +90,7 @@ public class ITZipkinServer {
       .isEqualTo("[" + new String(SpanBytesEncoder.JSON_V2.encodeList(TRACE), UTF_8) + "]");
   }
 
-  @Test public void getTraces_emptyNotOk() throws Exception {
+  @Test void getTraces_emptyNotOk() throws Exception {
     storage.accept(TRACE).execute();
 
     Response response = get("/api/v2/traceMany?traceIds=");
@@ -113,7 +100,7 @@ public class ITZipkinServer {
       .isEqualTo("traceIds parameter is empty");
   }
 
-  @Test public void getTraces_singleNotOk() throws Exception {
+  @Test void getTraces_singleNotOk() throws Exception {
     storage.accept(TRACE).execute();
 
     Response response = get("/api/v2/traceMany?traceIds=" + TRACE.get(0).traceId());
@@ -123,7 +110,7 @@ public class ITZipkinServer {
       .isEqualTo("Use /api/v2/trace/{traceId} endpoint to retrieve a single trace");
   }
 
-  @Test public void getTraces_malformed() throws Exception {
+  @Test void getTraces_malformed() throws Exception {
     storage.accept(TRACE).execute();
 
     Response response = get("/api/v2/traceMany?traceIds=abcd,0e8b46e1-81b");
@@ -133,7 +120,7 @@ public class ITZipkinServer {
       .isEqualTo("0e8b46e1-81b should be lower-hex encoded with no prefix");
   }
 
-  @Test public void tracesQueryRequiresNoParameters() throws Exception {
+  @Test void tracesQueryRequiresNoParameters() throws Exception {
     storage.accept(TRACE).execute();
 
     Response response = get("/api/v2/traces");
@@ -142,12 +129,12 @@ public class ITZipkinServer {
       .isEqualTo("[" + new String(SpanBytesEncoder.JSON_V2.encodeList(TRACE), UTF_8) + "]");
   }
 
-  @Test public void v2WiresUp() throws Exception {
+  @Test void v2WiresUp() throws Exception {
     assertThat(get("/api/v2/services").isSuccessful())
       .isTrue();
   }
 
-  @Test public void doesntSetCacheControlOnNameEndpointsWhenLessThan4Services() throws Exception {
+  @Test void doesntSetCacheControlOnNameEndpointsWhenLessThan4Services() throws Exception {
     storage.accept(TRACE).execute();
 
     assertThat(get("/api/v2/services").header("Cache-Control"))
@@ -160,19 +147,19 @@ public class ITZipkinServer {
       .isNull();
   }
 
-  @Test public void spanNameQueryWorksWithNonAsciiServiceName() throws Exception {
+  @Test void spanNameQueryWorksWithNonAsciiServiceName() throws Exception {
     assertThat(get("/api/v2/spans?serviceName=个人信息服务").code())
       .isEqualTo(200);
   }
 
-  @Test public void remoteServiceNameQueryWorksWithNonAsciiServiceName() throws Exception {
+  @Test void remoteServiceNameQueryWorksWithNonAsciiServiceName() throws Exception {
     assertThat(get("/api/v2/remoteServices?serviceName=个人信息服务").code())
       .isEqualTo(200);
   }
 
-  @Test public void remoteServiceNameReturnsCorrectJsonForEscapedWhitespaceInName()
+  @Test void remoteServiceNameReturnsCorrectJsonForEscapedWhitespaceInName()
     throws Exception {
-    storage.accept(Arrays.asList(CLIENT_SPAN.toBuilder()
+    storage.accept(List.of(CLIENT_SPAN.toBuilder()
       .localEndpoint(FRONTEND.toBuilder().serviceName("foo\tbar").build())
       .build()))
       .execute();
@@ -181,10 +168,10 @@ public class ITZipkinServer {
     assertThat(response.body().string()).isEqualTo("[\"foo\\tbar\"]");
   }
 
-  @Test public void setsCacheControlOnNameEndpointsWhenMoreThan3Services() throws Exception {
-    List<String> services = asList("foo", "bar", "baz", "quz");
+  @Test void setsCacheControlOnNameEndpointsWhenMoreThan3Services() throws Exception {
+    List<String> services = List.of("foo", "bar", "baz", "quz");
     for (int i = 0; i < services.size(); i++) {
-      storage.accept(asList(
+      storage.accept(List.of(
         Span.newBuilder().traceId("a").id(i + 1).timestamp(TODAY).name("whopper")
           .localEndpoint(Endpoint.newBuilder().serviceName(services.get(i)).build())
           .remoteEndpoint(Endpoint.newBuilder().serviceName(services.get(i) + 1).build())
@@ -206,7 +193,7 @@ public class ITZipkinServer {
       .isEqualTo("[\"bar\",\"baz\",\"foo\",\"quz\"]");
   }
 
-  @Test public void shouldAllowAnyOriginByDefault() throws Exception {
+  @Test void shouldAllowAnyOriginByDefault() throws Exception {
     Response response = client.newCall(new Request.Builder()
       .url(url(server, "/api/v2/traces"))
       .header("Origin", "http://foo.example.com")
@@ -218,13 +205,13 @@ public class ITZipkinServer {
     assertThat(response.header("access-control-allow-origin")).contains("*");
   }
 
-  @Test public void forwardsApiForUi() throws Exception {
+  @Test void forwardsApiForUi() throws Exception {
     assertThat(get("/zipkin/api/v2/traces").isSuccessful()).isTrue();
     assertThat(get("/zipkin/api/v2/traces").isSuccessful()).isTrue();
   }
 
   /** Simulate a proxy which forwards / to zipkin as opposed to resolving / -> /zipkin first */
-  @Test public void redirectedHeaderUsesOriginalHostAndPort() throws Exception {
+  @Test void redirectedHeaderUsesOriginalHostAndPort() throws Exception {
     Request forwarded = new Request.Builder()
       .url(url(server, "/"))
       .addHeader("Host", "zipkin.com")
@@ -240,7 +227,7 @@ public class ITZipkinServer {
       .isEqualTo("/zipkin/");
   }
 
-  @Test public void infoEndpointIsAvailable() throws IOException {
+  @Test void infoEndpointIsAvailable() throws IOException {
     Response info = get("/info");
     assertThat(info.isSuccessful()).isTrue();
     assertThat(info.body().contentType().toString())
@@ -249,7 +236,7 @@ public class ITZipkinServer {
       .isEqualToIgnoringWhitespace(stringFromClasspath(getClass(), "info.json"));
   }
 
-  @Test public void getTrace_spaceAfterTraceId() throws Exception {
+  @Test void getTrace_spaceAfterTraceId() throws Exception {
     storage.accept(TRACE).execute();
 
     Response response = get("/api/v2/trace/" + TRACE.get(0).traceId() + " ");
@@ -259,7 +246,7 @@ public class ITZipkinServer {
       .containsExactly(SpanBytesEncoder.JSON_V2.encodeList(TRACE));
   }
 
-  @Test public void traceMethodDisallowed() {
+  @Test void traceMethodDisallowed() {
     // trace method is disallowed for any route but we just test couple of paths here, can't test them all
     Arrays.stream(new String[]{"/", "/api/v2/traces", "/whatever/and/not"}).forEach(path -> {
       final Response response;
@@ -274,7 +261,6 @@ public class ITZipkinServer {
       }
     });
   }
-
 
   private Response get(String path) throws IOException {
     return client.newCall(new Request.Builder()
