@@ -1,20 +1,9 @@
 /*
- * Copyright 2015-2020 The OpenZipkin Authors
- *
- * Licensed under the Apache License, Version 2.0 (the "License"); you may not use this file except
- * in compliance with the License. You may obtain a copy of the License at
- *
- * http://www.apache.org/licenses/LICENSE-2.0
- *
- * Unless required by applicable law or agreed to in writing, software distributed under the License
- * is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express
- * or implied. See the License for the specific language governing permissions and limitations under
- * the License.
+ * Copyright The OpenZipkin Authors
+ * SPDX-License-Identifier: Apache-2.0
  */
 package zipkin2.storage.cassandra;
 
-import java.util.ArrayList;
-import java.util.Collections;
 import java.util.List;
 import zipkin2.Call;
 import zipkin2.storage.AutocompleteTags;
@@ -28,7 +17,7 @@ class CassandraAutocompleteTags implements AutocompleteTags {
     enabled = storage.searchEnabled
       && !storage.autocompleteKeys.isEmpty()
       && storage.metadata().hasAutocompleteTags;
-    keysCall = Call.create(Collections.unmodifiableList(new ArrayList<>(storage.autocompleteKeys)));
+    keysCall = Call.create(List.copyOf(storage.autocompleteKeys));
     valuesCallFactory = enabled ? new SelectAutocompleteValues.Factory(storage.session()) : null;
   }
 
