@@ -1,21 +1,19 @@
 /*
- * Copyright 2015-2020 The OpenZipkin Authors
- *
- * Licensed under the Apache License, Version 2.0 (the "License"); you may not use this file except
- * in compliance with the License. You may obtain a copy of the License at
- *
- * http://www.apache.org/licenses/LICENSE-2.0
- *
- * Unless required by applicable law or agreed to in writing, software distributed under the License
- * is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express
- * or implied. See the License for the specific language governing permissions and limitations under
- * the License.
+ * Copyright The OpenZipkin Authors
+ * SPDX-License-Identifier: Apache-2.0
  */
 package zipkin2.storage.cassandra;
 
-import java.util.Collections;
+import com.datastax.oss.driver.api.core.CqlSession;
+import com.datastax.oss.driver.api.core.metadata.schema.KeyspaceMetadata;
 import java.util.List;
-import org.junit.Test;
+import java.util.Map;
+import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.Test;
+import org.junit.jupiter.api.extension.ExtendWith;
+import org.mockito.Answers;
+import org.mockito.Mock;
+import org.mockito.junit.jupiter.MockitoExtension;
 import zipkin2.Call;
 import zipkin2.Span;
 import zipkin2.storage.QueryRequest;
@@ -24,22 +22,37 @@ import zipkin2.storage.cassandra.SelectTraceIdsFromServiceSpan.Factory.FlatMapSe
 import static org.assertj.core.api.Assertions.assertThat;
 import static zipkin2.TestObjects.DAY;
 import static zipkin2.TestObjects.TODAY;
-import static zipkin2.storage.cassandra.InternalForTests.mockSession;
 
 // TODO: tests use toString because the call composition chain is complex (includes flat mapping)
 // This could be made a little less complex if we scrub out map=>map to a list of transformations,
 // or possibly special-casing common transformations.
-public class CassandraSpanStoreTest {
-  CassandraSpanStore spanStore = spanStore(CassandraStorage.newBuilder());
+@ExtendWith(MockitoExtension.class)
+class CassandraSpanStoreTest {
+  @Mock CqlSession session;
+  Schema.Metadata metadata = new Schema.Metadata(true, true);
+  @Mock KeyspaceMetadata keyspace;
+  CassandraSpanStore spanStore;
+
+  @BeforeEach void setup() {
+    spanStore = spanStore(CassandraStorage.newBuilder().ensureSchema(false));
+  }
+
   QueryRequest.Builder queryBuilder = QueryRequest.newBuilder().endTs(TODAY).lookback(DAY).limit(5);
 
-  @Test public void getTraces_fansOutAgainstServices() {
+  @Test void timestampRange_withIndexTtlProvidedAvoidsOverflow() {
+    QueryRequest query = QueryRequest.newBuilder().endTs(TODAY).lookback(TODAY).limit(5).build();
+    CassandraSpanStore.TimestampRange timestampRange = spanStore.timestampRange(query, 7890000);
+
+    assertThat(timestampRange.startMillis).isLessThan(timestampRange.endMillis);
+  }
+
+  @Test void getTraces_fansOutAgainstServices() {
     Call<List<List<Span>>> call = spanStore.getTraces(queryBuilder.build());
 
     assertThat(call.toString()).contains(FlatMapServicesToInputs.class.getSimpleName());
   }
 
-  @Test public void getTraces_withSpanNameButNoServiceName() {
+  @Test void getTraces_withSpanNameButNoServiceName() {
     Call<List<List<Span>>> call = spanStore.getTraces(queryBuilder.spanName("get").build());
 
     assertThat(call.toString())
@@ -47,16 +60,16 @@ public class CassandraSpanStoreTest {
       .contains("span=get"); // no need to look at two indexes
   }
 
-  @Test public void getTraces_withTagButNoServiceName() {
+  @Test void getTraces_withTagButNoServiceName() {
     Call<List<List<Span>>> call = spanStore.getTraces(
-      queryBuilder.annotationQuery(Collections.singletonMap("environment", "production")).build());
+      queryBuilder.annotationQuery(Map.of("environment", "production")).build());
 
     assertThat(call.toString())
       .doesNotContain(FlatMapServicesToInputs.class.getSimpleName()) // works against the span table
       .contains("l_service=null, annotation_query=environment=production");
   }
 
-  @Test public void getTraces_withDurationButNoServiceName() {
+  @Test void getTraces_withDurationButNoServiceName() {
     Call<List<List<Span>>> call = spanStore.getTraces(queryBuilder.minDuration(1000L).build());
 
     assertThat(call.toString())
@@ -64,7 +77,7 @@ public class CassandraSpanStoreTest {
       .contains("start_duration=1,");
   }
 
-  @Test public void getTraces_withRemoteServiceNameButNoServiceName() {
+  @Test void getTraces_withRemoteServiceNameButNoServiceName() {
     Call<List<List<Span>>> call =
       spanStore.getTraces(queryBuilder.remoteServiceName("backend").build());
 
@@ -74,13 +87,13 @@ public class CassandraSpanStoreTest {
       .doesNotContain("span="); // no need to look at two indexes
   }
 
-  @Test public void getTraces() {
+  @Test void getTraces() {
     Call<List<List<Span>>> call = spanStore.getTraces(queryBuilder.serviceName("frontend").build());
 
     assertThat(call.toString()).contains("service=frontend, span=,");
   }
 
-  @Test public void getTraces_withSpanName() {
+  @Test void getTraces_withSpanName() {
     Call<List<List<Span>>> call = spanStore.getTraces(
       queryBuilder.serviceName("frontend").spanName("get").build());
 
@@ -88,7 +101,7 @@ public class CassandraSpanStoreTest {
       .contains("service=frontend, span=get,");
   }
 
-  @Test public void getTraces_withRemoteServiceName() {
+  @Test void getTraces_withRemoteServiceName() {
     Call<List<List<Span>>> call = spanStore.getTraces(
       queryBuilder.serviceName("frontend").remoteServiceName("backend").build());
 
@@ -97,7 +110,7 @@ public class CassandraSpanStoreTest {
       .doesNotContain("service=frontend, span="); // no need to look at two indexes
   }
 
-  @Test public void getTraces_withSpanNameAndRemoteServiceName() {
+  @Test void getTraces_withSpanNameAndRemoteServiceName() {
     Call<List<List<Span>>> call = spanStore.getTraces(
       queryBuilder.serviceName("frontend").remoteServiceName("backend").spanName("get").build());
 
@@ -106,7 +119,7 @@ public class CassandraSpanStoreTest {
       .contains("service=frontend, span=get,");
   }
 
-  @Test public void searchDisabled_doesntMakeRemoteQueryRequests() {
+  @Test void searchDisabled_doesntMakeRemoteQueryRequests() {
     CassandraSpanStore spanStore = spanStore(CassandraStorage.newBuilder().searchEnabled(false));
 
     assertThat(spanStore.getTraces(queryBuilder.build())).hasToString("ConstantCall{value=[]}");
@@ -115,7 +128,8 @@ public class CassandraSpanStoreTest {
     assertThat(spanStore.getSpanNames("icecream")).hasToString("ConstantCall{value=[]}");
   }
 
-  static CassandraSpanStore spanStore(CassandraStorage.Builder builder) {
-    return new CassandraSpanStore(builder.sessionFactory(storage -> mockSession()).build());
+  CassandraSpanStore spanStore(CassandraStorage.Builder builder) {
+    return new CassandraSpanStore(session, metadata, keyspace, builder.maxTraceCols,
+      builder.indexFetchMultiplier, builder.strictTraceId, builder.searchEnabled);
   }
 }
