@@ -1,19 +1,9 @@
 /*
- * Copyright 2015-2019 The OpenZipkin Authors
- *
- * Licensed under the Apache License, Version 2.0 (the "License"); you may not use this file except
- * in compliance with the License. You may obtain a copy of the License at
- *
- * http://www.apache.org/licenses/LICENSE-2.0
- *
- * Unless required by applicable law or agreed to in writing, software distributed under the License
- * is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express
- * or implied. See the License for the specific language governing permissions and limitations under
- * the License.
+ * Copyright The OpenZipkin Authors
+ * SPDX-License-Identifier: Apache-2.0
  */
 package zipkin2.elasticsearch.internal.client;
 
-import java.util.Collections;
 import java.util.LinkedHashMap;
 import java.util.Map;
 
@@ -41,7 +31,7 @@ public class Aggregation {
 
   public static Aggregation min(String field) {
     Aggregation result = new Aggregation(field);
-    result.min = Collections.singletonMap("field", field);
+    result.min = Map.of("field", field);
     return result;
   }
 
@@ -68,7 +58,7 @@ public class Aggregation {
     Map<String, String> order;
 
     void order(String agg, String direction) {
-      order = Collections.singletonMap(agg, direction);
+      order = Map.of(agg, direction);
     }
 
     public String getField() {
